Fixed overflow on small screen sizes

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -33,6 +33,7 @@ p {
 .fly-box {
 	z-index: 1;
   padding: 10px;
+  overflow: hidden;
 }
 .slide-in {
   -webkit-transform: translateX(1300px);
@@ -301,8 +302,9 @@ video {
 }
 .about-me-collage {
 	height: 100%;
-	min-height: 750px;
+	/*min-height: 750px;*/
 	margin-bottom: .8%;
+	overflow: hidden;
 }
 #spin-circle {
 	background: url(../Images/grey-gradient-circle.png) center center no-repeat;
@@ -314,6 +316,7 @@ video {
 	animation: rotate 80s infinite linear;
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 }
 .collage-pics {
 	position: absolute;
@@ -764,6 +767,7 @@ img {
 }
 .willow-image {
 	height: 60vh;
+	max-width: 90vw;
 	border: 3px solid black;
 }
 /*========================= FOOTER =====================*/
@@ -884,8 +888,12 @@ footer {
   }
 }
 @media only screen and (max-width: 480px) {
+  body {
+  	max-width: 100vw;
+  }
   video {
-  	height: 100vh;
+  	max-height: 100vh;
+  	overflow: hidden;
   }
   #exp-title-box {
   	margin: 10px 8px 10px 4px;
@@ -923,9 +931,15 @@ footer {
   	justify-content: center;
   }
   .image-hide{
-  /*visibility: hidden;*/
-  display: none;
-}
+  	/*visibility: hidden;*/
+  	display: none;
+	}
+	#willow-image {
+		height: auto;
+	}
+	.about-me-collage {
+		height: 50vh;
+	}
   #github-button {
 
   }
@@ -968,6 +982,10 @@ footer {
   #skills-container {
   	height: auto;
   }
+  #about-me-div {
+  	height: auto;
+  }
+
   p {
   	font-size: 20px;
   }
@@ -1032,6 +1050,7 @@ footer {
     -ms-animation: none;
     -o-animation: none;
     animation: none;
+    overflow: hidden;
   }
   .slide-in:nth-child(odd) {
     -webkit-transform: none;
